--- a/frontend/src/pages/Admin/AccountManagement/AccountManagement.css
+++ b/frontend/src/pages/Admin/AccountManagement/AccountManagement.css
@@ -41,7 +41,7 @@
   color: #999;
 }
 
-.btn-tool {
+.account-btn-tool {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -54,14 +54,13 @@
   transition: all 0.2s;
 }
 
-.btn-tool:hover {
+.account-btn-tool:hover {
   background: #f5f5f5;
 }
 
 .btn-add {
   background: #1890ff;
   color: white;
-  border-color: #1890ff;
 }
 
 .btn-add:hover {
@@ -159,12 +158,12 @@
   background: #bae7ff;
 }
 
-.btn-delete {
-  background: #ffccc7;
-  color: #fce0e0;
+.account-btn-delete {
+  background: #f61f0b;
+  color: #fbf6f6;
 }
 
-.btn-delete:hover {
+.account-btn-delete:hover {
   background: #ffccc7;
   color: #ee0505;
 }
